<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryPriceActivity">

    <TextView
        android:id="@+id/work_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"

        android:layout_marginBottom="20dp"
        android:text="@string/work_ques"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/work_question">

        <RadioButton
            android:id="@+id/price_opt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="125dp"
            android:text="@string/price_text_opt_1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/price_opt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/price_text_opt_2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/price_opt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/price_text_opt_3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/price_opt_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/price_text_opt_4"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/price_opt_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/price_text_opt_5"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_price_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:text="@string/next" />



</RelativeLayout>