<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryUseActivity">

    <TextView
        android:id="@+id/use_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"

        android:layout_marginBottom="20dp"
        android:text="@string/use_ques"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/use_opt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/use_question"

        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="125dp"
        android:text="@string/use_text_opt_1"
        android:textSize="20sp"/>


    <CheckBox
        android:id="@+id/use_opt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/use_opt_1"

        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_text_opt_2"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/use_opt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/use_opt_2"

        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_text_opt_3"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_use_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"

        android:text="@string/next" />


</RelativeLayout>