<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:fontFamily="cursive"
        android:text="@string/laptop4you"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="50sp" />



    <Button
        android:id="@+id/btn_next_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:text="@string/main_start" />


    <ImageView
        android:id="@+id/wlc_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        app:srcCompat="@drawable/laptop1"
        android:contentDescription="@string/display" />

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next_1"

        android:layout_centerHorizontal="true"

        android:layout_marginStart="30dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="30dp"

        android:layout_marginBottom="20dp"
        android:text="@string/main_desc"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>